--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ path.base=/accounts
 path.getAccounts=/getAccounts
 path.getAccountById=/getAccountById/{id}
 path.createAccount=/createAccount
+path.getCohortById=/getCohortById/{id}
+path.createCohort=/createCohort
+path.getCohorts=/getCohorts
 path.deleteAccount=/deleteAccount/{id}
 path.updateAccount=/updateAccount/{id}
 url.generator=http://localhost:8082
